# led-board

./: .gitignore  CMakeLists.txt  compile_commands.json  platformio.ini  run.sh
.cache/clangd/index/: Adafruit_NeoPixel.cpp.9328D1FD2C6B40F9.idx  Adafruit_NeoPixel.h.35E8B7310FD62E4B.idx  canzero.cpp.1E4DF55494987179.idx  canzero.h.E0723E396C0CE446.idx  esp.c.3598ADBE197ACBEF.idx  esp8266.c.C462F2953E35F8D0.idx  fsm.cpp.39345387A3B4E9CE.idx  fsm.hpp.0F379388EAE23846.idx  kendyte_k210.c.F04B1743BDBA4779.idx  led_board.cpp.10BC31BAD9466B37.idx  led_board.hpp.9B75C9844826C81B.idx  main.cpp.A6FFEFAEAA306D8E.idx  metrics.h.4788F36BEBE5487F.idx  pinout.h.ED340021EDDFF303.idx  startup.cpp.1108DBD810949043.idx  states.hpp.AFF7A8AA93FFD65B.idx  timestamp.h.F84A1222878D06E3.idx
mock/: Adafruit_NeoPixel.h  led_board.cpp
src/: defaults.h  error_level_range_check.h  handle_heartbeat.cpp  main.cpp  print.cpp
src/can/: can.cpp  can.hpp
src/canzero/: canzero.cpp  canzero.h
src/firmware/: led_board.cpp  led_board.hpp  pinout.h
src/fsm/: fsm.cpp  fsm.hpp  states.hpp
src/fsm/states/: breathe.cpp  liftoff.cpp  pulsate.cpp  rainbow.cpp  shutdown.cpp  startup.cpp
src/util/: blends.hpp  boxcar.h  ema.hpp  timestamp.h  timing.h
